--- a/index.html
+++ b/index.html
@@ -172,8 +172,10 @@
 													src="assets/icons/🦆 icon _smart home_.svg"
 													alt="" />
 												<div class="rectContents">
-													<h4 class="rectHead"></h4>
-													<p class="generalP"></p>
+													<h4 class="rectHead">Donec porttitor euismod</h4>
+													<p class="generalP">
+														Nullam a lacinia ipsum, nec dignissim purus. Nulla
+													</p>
 												</div>
 											</div>
 											<div class="rectangle">
@@ -181,13 +183,22 @@
 													src="assets/icons/🦆 icon _user octagon_.svg"
 													alt="" />
 												<div class="rectContents">
-													<h4 class="rectHead"></h4>
-													<p class="generalP"></p>
+													<h4 class="rectHead">Donec porttitor euismod</h4>
+													<p class="generalP">
+														Nullam a lacinia ipsum, nec dignissim purus. Nulla
+													</p>
 												</div>
 											</div>
 										</div>
 									</div>
-									<div class="sec3Con2"></div>
+									<div class="sec3Con2">
+										<div class="imgGrid">
+											<img class="grid1" src="assets/images/grid3.jpg" alt="" />
+											<img class="grid2" src="assets/images/grid1.jpg" alt="" />
+
+											<img class="grid3" src="assets/images/grid2.jpg" alt="" />
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
